--- a/appinfo.json
+++ b/appinfo.json
@@ -1,10 +1,11 @@
 {
-  "uuid": "11490515-3888-4583-9e40-367ed931571d",
-  "shortName": "Fuzzy Text Int'l",
-  "longName": "Fuzzy Text International",
-  "companyName": "Jesse Hallett",
+  "uuid": "9641af77-1548-4bc8-9bd0-b52b4268b25b",
+  "uuid_old": "11490515-3888-4583-9e40-367ed931571d",
+  "shortName": "Fuzzier Text Int'l",
+  "longName": "Fuzzier Text International",
+  "companyName": "Michael Vezie",
   "versionCode": 4,
-  "versionLabel": "1.3",
+  "versionLabel": "2.0",
   "watchapp": {
     "watchface": true
   },
