--- a/appinfo.json
+++ b/appinfo.json
@@ -1,17 +1,19 @@
 {
-  "uuid": "9641af77-1548-4bc8-9bd0-b52b4268b25b",
-  "uuid_old": "11490515-3888-4583-9e40-367ed931571d",
-  "shortName": "Fuzzier Text Int'l",
-  "longName": "Fuzzier Text International",
-  "companyName": "Michael Vezie",
-  "versionCode": 4,
-  "versionLabel": "2.0",
-  "watchapp": {
-    "watchface": true
-  },
-  "capabilities": [ "configurable" ],
-  "appKeys": {},
-  "resources": {
-    "media": []
-  }
+    "appKeys": {},
+    "capabilities": [
+        "configurable"
+    ],
+    "companyName": "Michael Vezie",
+    "longName": "Fuzzier Text International",
+    "projectType": "native",
+    "resources": {
+        "media": []
+    },
+    "shortName": "Fuzzier Text Int'l",
+    "uuid": "9641af77-1548-4bc8-9bd0-b52b4268b25b",
+    "versionCode": 4,
+    "versionLabel": "2.0",
+    "watchapp": {
+        "watchface": true
+    }
 }
